--- a/AI_is.html
+++ b/AI_is.html
@@ -654,36 +654,24 @@
     <div class="course-container">
         <h1>AI</h1>
 
+         <div class="lecture">
+            <h2>Material</h2>
+            <p> all Material of ai </p>
+            <a href="https://www.youtube.com/playlist?list=PLsnvpvHuTUbAZr0n65TgytBK6bHdT33A7" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/drive/folders/1idzWQqb_Fb-BPLBPABPRMYLE-Pr7AS8j?usp=sharing" target="_blank">PDF File </a>
+        </div>
+
         <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
+            <h2>Lec 1:  Intro</h2>
+            <p>  intro  </p>
             <a href="" target="_blank">YouTube Video </a>
             <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <a href="" target="_blank">Teams code </a>
 
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
         </div> -->
+
+
+      
     </div>
 
     <header>
