--- a/data_mining.html
+++ b/data_mining.html
@@ -654,36 +654,15 @@
     <div class="course-container">
         <h1>Data Mining</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-
+         <div class="lecture">
+            <h2>Lec 0:  Intro</h2>
+            <p>  intro to Data Mining </p>
+            <a href="https://youtu.be/eAy8pVxqcJY?si=R8Z92c41lbgp9M66" target="_blank">YouTube Video </a>
+            <a href="https://drive.google.com/file/d/1AiIlVODxWOs61U_fB6h5PhmO7tqW5edx/view?usp=drivesdk" target="_blank">PDF File </a>
+            <a href="https://drive.google.com/drive/folders/1cr83ZpDkaFdlv48g3KZBsesJyVA_5Bxt" target="_blank">Book </a>
+            <a href="" target="_blank">Teams code </a>
         </div>
 
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
