--- a/database-2.html
+++ b/database-2.html
@@ -654,36 +654,17 @@
     <div class="course-container">
         <h1>database-2</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
+         <div class="lecture">
+            <h2>Lec 0:  Intro</h2>
+            <p>  intro to database-2 </p>
             <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <a href="https://drive.google.com/file/d/1_PcvQViWWV8nubhK7AL6Xv5Z3eZf_OCG/view?usp=drivesdk" target="_blank">PDF File </a>
+            <a href="https://drive.google.com/file/d/1Q7PTNHcbKBPew9xxhcR85408qn4M_E6x/view?usp=drivesdk" target="_blank">Book </a>
+            <a href="https://teams.microsoft.com/l/channel/19%3AWkgy8LgdVTvsVyhx7uYbLfwKZtKJ5xeXi0mHx71yK2I1%40thread.tacv2/?groupId=082401fc-a42b-47d6-9701-7b755ffbaa00" target="_blank">Teams code </a>
 
         </div>
 
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
+     
     </div>
 
     <header>
