--- a/Big_data.html
+++ b/Big_data.html
@@ -654,36 +654,15 @@
     <div class="course-container">
         <h1>Big data</h1>
 
-        <!-- <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
+         <div class="lecture">
+            <h2>Lec 0:  Intro</h2>
+            <p>  intro to Big Data </p>
+            <a href="https://youtu.be/SCkpNEB2sFI?si=WLsyTyL25w_ojRU5" target="_blank">YouTube Video</a>
             <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
+            <a href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fchannel%2F19%3Ap6HElwlEYDwoBJEhrKZgxhFkdn8WgM2sN9KIeAAx2tE1%40thread.tacv2%2F%3FgroupId%3Da6bb52bc-6a1f-4259-b592-8ee85f774f79&type=channel&deeplinkId=94ca53d5-0944-466d-a872-af568806737c&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true" target="_blank">Teams code</a>
 
         </div>
 
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div>
-
-        <div class="lecture">
-            <h2>Lec 1: ..........</h2>
-            <p> description </p>
-            <a href="" target="_blank">YouTube Video </a>
-            <a href="" target="_blank">PDF File </a>
-            <a href="" target="_blank">Quiz File </a>
-            <a href="" target="_blank">Answer Quiz File </a>
-            <a href="" target="_blank">Test </a>
-        </div> -->
     </div>
 
     <header>
