--- a/Learning_Progress.html
+++ b/Learning_Progress.html
@@ -292,7 +292,7 @@
             'IS': ['Data Mining', 'Database-2', 'AI', 'Big Data', 'Data Storage', 'Data Analytical'],
             'CS': [],
             'IT': [],
-            'AI': []
+            'AI': ['Parallel Processing','Machine learning','AI','Big Data','Database-2','Convex']
         };
 
         const lessons = {
@@ -312,7 +312,10 @@
             'AI': ['Lec0'],
             'Big Data': ['Lec0'],
             'Data Storage': ['Lec0'],
-            'Data Analytical': ['Lec0']
+            'Parallel Processing': ['Lec0'],
+            'Machine learning': ['Lec0'],
+            'Convex': ['Lec0']
+
         };
 
         const progressData = JSON.parse(localStorage.getItem('progressData')) || {};
