--- a/Ai.html
+++ b/Ai.html
@@ -611,6 +611,12 @@ function updateLikeButton(button, countSpan, id) {
             scrollToTopBtn.style.display = 'none';
         }
     });
+
+    function toggleMenu() {
+            var menu = document.getElementById("nav-menu");
+            menu.classList.toggle("active");
+        }
+        
     </script>
 </body>
 
