--- a/Learning_Progress.html
+++ b/Learning_Progress.html
@@ -309,7 +309,7 @@
             'DC': ['Lec0'],
             'Data Mining': ['Lec0'],
             'Database-2': ['Lec0'],
-            'AI': ['Lec0'],
+            'AI': ['Lec0','Lec1'],
             'Big Data': ['Lec0'],
             'Data Storage': ['Lec0'],
             'Parallel Processing': ['Lec0'],
