--- a/news.html
+++ b/news.html
@@ -317,18 +317,20 @@
         </div>
     </div>
 
+    <header>
+        <img src="img/photo_2024-10-01_00-48-56.png" alt="Logo">
+    </header>
+
     <footer>
         <div class="footer-container">
-            <div class="social-media">
-                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            </div>
+            <p>&copy; 2024 Materialx. All rights reserved</p>
+            <hr>
             <div class="footer-links">
-                <a href="#" class="footer-link">Privacy Policy</a>
-                <a href="#" class="footer-link">Terms of Service</a>
+                <a href="contact.html" class="footer-link">Contact Us</a>
+                <a href="disclaimer.html" class="footer-link">Disclaimer</a>
+                <a href="terms.html" class="footer-link">Terms </a>
             </div>
-            <p>&copy; 2024 Your Website. All rights reserved.</p>
+            <hr>
         </div>
     </footer>
 
@@ -341,17 +343,14 @@
             'level1': {
                 title: "Level 1 News",
                 content: `
-                    <div class="news-item">First news for Level 1</div>
-                    <div class="news-item">Second news for Level 1</div>
-                    <div class="news-item">Third news for Level 1</div>
+                    <div class="news-item">NAN</div>
                 `,
                 moreLink: "#"
             },
             'level2': {
                 title: "Level 2 News",
                 content: `
-                    <div class="news-item">First news for Level 2</div>
-                    <div class="news-item">Second news for Level 2</div>
+                    <div class="news-item">NAN</div>
                 `,
                 moreLink: "#"
             },
@@ -364,6 +363,10 @@
                     <div class="news-item">Database-2: code teams:  <a href="https://teams.microsoft.com/l/channel/19%3AWkgy8LgdVTvsVyhx7uYbLfwKZtKJ5xeXi0mHx71yK2I1%40thread.tacv2/?groupId=082401fc-a42b-47d6-9701-7b755ffbaa00" target="_blank">Link</a></div>
                     <div class="news-item">Big data: Distribution grades: 30 mid - 20 project - 50 final</div>
                     <div class="news-item">Big data: code teams: <a href="https://teams.microsoft.com/l/channel/19%3Ap6HElwlEYDwoBJEhrKZgxhFkdn8WgM2sN9KIeAAx2tE1%40thread.tacv2/?groupId=a6bb52bc-6a1f-4259-b592-8ee85f774f79" target="_blank">Link</a></div>
+                    <div class="news-item">BI: Distribution grades: 30 mid - 20 project - 50 final</div>
+                    <div class="news-item">AI: Distribution grades: 15 mid - 30 project - 5 Assiment - 50 final</div>
+
+
                 `,
                 moreLink: "#"
             },
@@ -384,8 +387,12 @@
             'ai': {
                 title: "AI News",
                 content: `
-                    <div class="news-item">No updates available.</div>
-                `,
+                    <div class="news-item">Database-2: Distribution grades: 30 mid - 10 quiz lab - 10 project or practical exam - 50 final</div>
+                    <div class="news-item">Database-2: code teams:  <a href="https://teams.microsoft.com/l/channel/19%3AWkgy8LgdVTvsVyhx7uYbLfwKZtKJ5xeXi0mHx71yK2I1%40thread.tacv2/?groupId=082401fc-a42b-47d6-9701-7b755ffbaa00" target="_blank">Link</a></div>
+                    <div class="news-item">Big data: Distribution grades: 30 mid - 20 project - 50 final</div>
+                    <div class="news-item">Big data: code teams: <a href="https://teams.microsoft.com/l/channel/19%3Ap6HElwlEYDwoBJEhrKZgxhFkdn8WgM2sN9KIeAAx2tE1%40thread.tacv2/?groupId=a6bb52bc-6a1f-4259-b592-8ee85f774f79" target="_blank">Link</a></div> 
+                    <div class="news-item">AI: Distribution grades: 15 mid - 30 project - 5 Assiment - 50 final</div>
+               `,
                 moreLink: "#"
             }
         };
