--- a/home.html
+++ b/home.html
@@ -548,8 +548,8 @@
     <nav>
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
-            <li><a href="quiz.html" target="_blank"><i class="fas fa-clipboard-list"></i> Quiz (Demo)</a></li>
             <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
+            <li><a href="rec.html" target="_blank"><i class="fas fa-video"></i> Recording</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a>
             </li>
